fixed horizontal scroll issue

--- a/Parallax-Scrolling-master/css/bootstrap.css
+++ b/Parallax-Scrolling-master/css/bootstrap.css
@@ -7321,6 +7321,13 @@ and (min-width : 1700px) {
     }
 
 
+
+
+    html {
+        overflow-x: hidden;
+        /* overflow: hidden; */
+    }
+
 }
 
 
